tests/cases/memory/errors/zone-current-missing-callable.ari
fn render(zone: ref mut Zone, value: i64) -> std::string::String {
  return std::fmt::format_value(zone, value);
}

fn main() -> i64 {
  let op: fn(ref mut Zone, i64) -> std::string::String = render;
  let text = op(1);
  return text.len();
}
